# diff-guard

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vale.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_TASKS.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
Sprints/: Story 0-1 Repo Bootstrap.md  Story 0-2 Containerize & env.md
backend/: __init__.py  app.py  config.py
backend/cli/: __init__.py  main.py
backend/db/: models.py
backend/routes/: __init__.py  webhook.py
backend/services/: __init__.py  artifactory.py  llm_client.py  policy.py
diff_worker/: __init__.py  worker.py
diff_worker/diff/: __init__.py  normalize.py  npm_diff.py
diff_worker/heuristics/: __init__.py  npm_redflags.py
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
tests/: conftest.py  test_coverage_stubs.py  test_health.py  test_more_coverage.py
