[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffguard"
version = "0.1.0"
description = "DiffGuard: LLM-assisted semantic diff risk gating for npm artifacts"
authors = [ { name = "DiffGuard Team" } ]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11,<3.12"
keywords = ["security", "supply-chain", "diff", "llm", "npm"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Security",
]
# Runtime dependencies (keep minimal; pin with compatible releases)
dependencies = [
  "fastapi~=0.111.0",
  "uvicorn[standard]~=0.30.0",
  "pydantic~=2.7.0",
  "pydantic-settings~=2.2.0",
  "SQLAlchemy~=2.0.0",
  "structlog~=24.1.0",
  "requests~=2.32.0",
  "typer~=0.12.0",
  "PyYAML~=6.0.0",
]

# Explicit package list to avoid accidental inclusion of non-package top-level dirs
[tool.setuptools]
packages = ["backend", "diff_worker"]

[project.optional-dependencies]
dev = [
  "pytest~=8.2.0",
  "pytest-cov~=5.0.0",
  "mypy~=1.10.0",
  "ruff~=0.5.0",
  "black~=24.4.0",
  "types-requests~=2.32.0.0",
  "types-PyYAML~=6.0.0.0",
]

[project.scripts]
diffguard = "backend.cli.main:app"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q --cov=backend --cov=diff_worker --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
plugins = []

[tool.coverage.run]
branch = true
source = ["backend", "diff_worker"]

[tool.coverage.report]
show_missing = true
skip_covered = true
